# utilityy

./: README.md  config.py  database.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  spark_utility.db  test_bot.py
attached_assets/: Pasted-Build-me-a-complete-Discord-bot-in-Python-named-Spark-Utility-General-Bot-Features-Customizab-1751813583262_1751813583269.txt  Pasted-Build-me-a-complete-advanced-Discord-bot-in-Python-named-Spark-Utility-General-Bot-Features--1751813377739_1751813377744.txt
cogs/: help.py  logging_system.py  moderation.py  tickets.py  utility.py
utils/: embeds.py  helpers.py
