[tool.poetry]
name = "spark-utility"
version = "0.1.0"
description = "Spark Utility Discord bot with web server"
authors = ["GAUTTHAMdev <Viviangautham1124@gmail.com>"]
license = "MIT"
package-mode = false  # disables package install warning

[tool.poetry.dependencies]
python = ">=3.11"
aiohttp = "^3.12.13"
aiosqlite = "^0.21.0"
discord-py = "^2.5.2"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

