[project]
name = "utilityy"
version = "0.1.0"
description = "A utility Discord bot"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "discord.py>=2.3.2",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
