[project]
name = "utilityy"
version = "0.1.0"
description = "A Discord utility bot by Gautham"
authors = [
    { name = "Gautham B" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
